fixed webpage layout bug

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;800&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -25,8 +25,10 @@ section {
   grid-template-columns: 1fr 1fr;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 48px;
+  font-weight: 800;
   margin-bottom: 20px;
+  line-height: 72px;
 }
 .btn {
   display: block;
@@ -57,12 +59,14 @@ h1 {
   height: 100%;
 }
 #login label {
-  font-style: 500;
-  font-size: 1.1rem;
+  font-weight: 500;
+  font-size: 16px;
   display: block;
   margin-bottom: 5px;
+  line-height: 19px;
 }
 #login .input-group {
+  width: 100%;
   border: 1px solid #B0B4B0;
   display: flex;
   align-items: center;
@@ -72,6 +76,16 @@ h1 {
   margin-bottom: 15px;
   /* box-shadow: 2px 2px 15px rgba(0,0,0,0.1); */
 }
+/* code to remove input number type increment */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type=number] {
+  -moz-appearance: textfield;
+}
+/*  */
 #login .input-group.focus {
     border: 1px solid #1A8A1A;
     /* box-shadow: 2px 2px 10px #b4e4b4; */
@@ -83,7 +97,19 @@ h1 {
   width: 20px;
 }
 
-@media (max-width: 400px) {
+@media (max-width: 900px) {
+  #login {
+    padding: 30px;
+  }
+}
+
+@media (max-width: 712px) {
+  section {
+    grid-template-columns: 1fr;
+  }
+  h1 {
+    font-size: 34px;
+  }
   .banner-img {
     height: auto;
   }
